I have the humility not to rebase this

--- a/frontend-flask/static/faq.html
+++ b/frontend-flask/static/faq.html
@@ -51,7 +51,7 @@
           <ul>
           <li>Remote controlled robots with cameras, so we weren't technically playing in</li>
           <li>Other games which could be reduced to cards through a polynomial-time reduction</li>
-          <li>A military coo</li>
+          <li>A military coup</li>
           <li><s>Actually do some work</s></li>
           </ul>
           We eventually settled on writing our own.
